objects/EUR_CRM_Volume_Potential__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Affiliate_Country__c</fullName>
        <formula>EUR_CRM_Group_Outlet_Type__r.EUR_CRM_Affiliate_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Affiliate_Name__c</fullName>
        <formula>EUR_CRM_Group_Outlet_Type__r.EUR_CRM_Affiliate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Group_Outlet_Type__r.EUR_CRM_Group_Outlet_Name__c)</formula>
        <label>Group Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipName>EUR_CRM_Volume_Potentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Max_Weight__c</fullName>
        <label>Maximum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Min_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Volume Potential Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Volume Potential (EU)</label>
    <listViews>
        <fullName>All_DK_Volume_Potential</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>DKK</value>
        </filters>
        <label>All DK Volume Potential</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_FI_Volume_Potential</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Volume_Potential__c.EUR_FI_Volume_Potential</value>
        </filters>
        <label>All FI Volume Potential</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_PT_Volume_Potential</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Max_Weight__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Volume_Potential__c.EUR_PRT_VolumePotential</value>
        </filters>
        <label>All PT Volume Potential</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Volume_Potential__c.EUR_RU_Volume_Potential</value>
        </filters>
        <label>All RU</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_RU</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Volume_Potential_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Max_Weight__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Volume_Potential__c.EUR_BG_Volume_Potential</value>
        </filters>
        <label>EUR BG All Volume Potential View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_CH_Volume_Potential</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Volume_Potential__c.EUR_CH_Volume_Potential</value>
        </filters>
        <label>All CH Volume Potential</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_MA_Volume_Potential</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Volume_Potential__c.EUR_MA_Volume_Potential</value>
        </filters>
        <label>All MA Volume Potential</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_NG_Volume_Potential</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Volume_Potential__c.EUR_NG_Volume_Potential</value>
        </filters>
        <label>All NG Volume Potential</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Volume_Potential</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Volume_Potential__c.EUR_ZA_Volume_Potential</value>
        </filters>
        <label>All ZA Volume Potential</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Volume Potential No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Potential (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR AO Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Volume_Potential</fullName>
        <active>true</active>
        <label>AT Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR BG Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR CH Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Volume_Potential</fullName>
        <active>true</active>
        <label>DE Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Volume_Potential</fullName>
        <active>true</active>
        <description>Record Type for DK Volume Potential</description>
        <label>EUR DK Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Volume_Potential</fullName>
        <active>true</active>
        <label>EE Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR FI Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Volume_Potential</fullName>
        <active>true</active>
        <label>GB Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR KE Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Volume_Potential</fullName>
        <active>true</active>
        <label>LT Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Volume_Potential</fullName>
        <active>true</active>
        <label>LV Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR MA Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR NG Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_VolumePotential</fullName>
        <active>true</active>
        <label>EUR_PRT_VolumePotential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR PT Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR RU Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR ZA Volume Potential</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>